@@ -2,24 +2,28 @@ package kr.or.kosa.backend.chatbot.service;
 
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.chat.prompt.PromptTemplate;
-import org.springframework.ai.chat.prompt.SystemPromptTemplate;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StreamUtils;
 
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.Map;
 
 @Slf4j
 @Component
 public class PromptBuilder {
 
+    private static final String PROMPT_BASE_PATH = "prompts/chatbot/";
+    private static final String USER_PROMPT_TEMPLATE_STRING = "고객님 질문: {query}";
+
     // .st 파일들에서 프롬프트 로드
     private final Map<String, String> pagePrompts;
     private final String globalPromptTemplate;
+    private final PromptTemplate userPromptTemplate;
 
     public PromptBuilder() {
-        this.pagePrompts = Map.ofEntries(
+        this.pagePrompts = Collections.unmodifiableMap(Map.ofEntries(
                 Map.entry("MAIN", loadStTemplate("Main.st")),
                 Map.entry("BILLING", loadStTemplate("Billing.st")),
                 Map.entry("MYPAGE", loadStTemplate("MyPage.st")),
@@ -31,16 +35,17 @@ public class PromptBuilder {
                 Map.entry("PAYMENTS", loadStTemplate("Payments.st")),
                 Map.entry("SOCIAL_LOGIN", loadStTemplate("SocialLogin.st")),
                 Map.entry("USERS", loadStTemplate("Users.st"))
-        );
+        ));
 
         // Global.st 템플릿 로드 (하드코딩 제거)
         this.globalPromptTemplate = loadStTemplate("Global.st");
+        this.userPromptTemplate = new PromptTemplate(USER_PROMPT_TEMPLATE_STRING);
     }
 
     // .st 파일 로드 헬퍼 메서드
     private String loadStTemplate(String filename) {
         try {
-            ClassPathResource resource = new ClassPathResource("prompts/chatbot/" + filename);
+            ClassPathResource resource = new ClassPathResource(PROMPT_BASE_PATH + filename);
             String content = StreamUtils.copyToString(resource.getInputStream(), StandardCharsets.UTF_8);
             log.debug("✅ Loaded prompts/chatbot/{} ({} chars)", filename, content.length());
             return content;
@@ -52,20 +57,13 @@ public class PromptBuilder {
 
     // 공통(전역) 시스템 프롬프트 - Global.st 파일에서 로드 + 템플릿 치환
     private String createGlobalSystemPrompt(String projectName) {
-        // Global.st 내용에 {projectName} 치환
-        String systemPrompt = globalPromptTemplate.replace("{projectName}", projectName);
-
-        // Spring AI 템플릿으로 추가 처리 (필요시)
-        if (systemPrompt.contains("{projectName}")) {
-            SystemPromptTemplate template = new SystemPromptTemplate(globalPromptTemplate);
-            return template.render(Map.of("projectName", projectName));
-        }
-        return systemPrompt;
+        // 단순 치환으로 불필요한 템플릿 파싱 비용 제거
+        return globalPromptTemplate.replace("{projectName}", projectName);
     }
 
     // 페이지(컨텍스트)별 추가 프롬프트 - .st 파일에서 로드
     private String createPagePrompt(String pageContext) {
-        return pagePrompts.getOrDefault(pageContext, "");
+        return pageContext == null ? "" : pagePrompts.getOrDefault(pageContext, "");
     }
 
     // 1️⃣ "안내원 시스템 프롬프트" → 전역 + 페이지 프롬프트 합치기
@@ -78,8 +76,7 @@ public class PromptBuilder {
     // 2️⃣ 완전한 프롬프트 생성 (페이지 컨텍스트 추가)
     public String buildCompleteGuidePrompt(String projectName, String pageContext, String userQuery) {
         String systemPrompt = createGuideSystemPrompt(projectName, pageContext);
-        PromptTemplate userTemplate = new PromptTemplate("고객님 질문: {query}");
-        String userPrompt = userTemplate.render(Map.of("query", userQuery));
+        String userPrompt = userPromptTemplate.render(Map.of("query", userQuery));
         return systemPrompt + "\n\n" + userPrompt;
     }
 }
